--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,8 +2,9 @@ image: python:3.5
 
 stages:
     - test
-    - dist
     - quality
+    - build
+    - dist
 
 cache:
     paths:
@@ -20,10 +21,10 @@ before_script:
 bootstrap:
     stage: .pre
     script:
-        - python3.5 bootstrap.py --buildout-version=2.12.0
+        - python3.5 bootstrap.py
         - ./bin/buildout
 
-test:
+test-3.5:
     stage: test
     script:
         - pip install anybadge coverage
@@ -39,17 +40,6 @@ test:
             - ./coverage/
             - coverage.xml
 
-dist:
-    stage: dist
-    script:
-        - ./bin/buildout setup setup.py clean --all sdist bdist_egg bdist_wheel
-    artifacts:
-        paths:
-            - ./dist
-    only:
-        refs:
-            - tags
-
 pylint:
     stage: quality
     allow_failure: true
@@ -58,7 +48,7 @@ pylint:
         - mkdir ./pylint
         - ./bin/pylint src/pyams_zmi/ | tee ./pylint/pylint.log || pylint-exit $?
         - PYLINT_SCORE=$(sed -n 's/^Your code has been rated at \([-0-9.]*\)\/.*/\1/p' ./pylint/pylint.log)
-        - anybadge --label=Pylint --file=./pylint/pylint.svg --value=$PYLINT_SCORE 2=red 4=orange 8=yellow 10=green
+        - anybadge --label=Pylint --file=./pylint/pylint.svg --value=$PYLINT_SCORE pylint
         - echo "Pylint score is $PYLINT_SCORE"
     artifacts:
         paths:
@@ -82,37 +72,108 @@ coverage:
         variables:
             - $CODE_COVERAGE_DISABLED
 
-quality:
-    stage: quality
-    allow_failure: true
-    image: docker:stable
-    services:
-        - docker:stable-dind
-    variables:
-        DOCKER_DRIVER: overlay2
-        DOCKER_TLS_CERTDIR: ""
+build-3.5:
+    stage: build
     script:
-        - |
-            if ! docker info &>/dev/null; then
-              if [ -z "$DOCKER_HOST" -a "$KUBERNETES_PORT" ]; then
-                export DOCKER_HOST='tcp://localhost:2375'
-              fi
-            fi
-        - export SP_VERSION=$(echo "$CI_SERVER_VERSION" | sed 's/^\([0-9]*\)\.\([0-9]*\).*/\1-\2-stable/')
-        - docker run
-            --env SOURCE_CODE="$PWD"
-            --volume "$PWD":/code
-            --volume /var/run/docker.sock:/var/run/docker.sock
-            "registry.gitlab.com/gitlab-org/security-products/codequality:12-0-stable" /code
+        - ./bin/buildout setup setup.py clean --all sdist bdist_egg bdist_wheel
     artifacts:
-        reports:
-            codequality: gl-code-quality-report.json
-        expire_in: 1 week
-    dependencies: []
+        paths:
+            - ./dist
     only:
         refs:
-            - branches
+            - tags
+
+dist-3.5:
+    stage: dist
+    script:
+        - pip install twine
+        - twine upload dist/*
+    variables:
+        TWINE_USERNAME: $PYPI_USERNAME
+        TWINE_PASSWORD: $PYPI_PASSWORD
+    only:
+        refs:
             - tags
     except:
         variables:
-            - $CODE_QUALITY_DISABLED
+            - $PYPI_UPLOAD_DISABLED
+
+dist-3.6:
+    stage: dist
+    image: python:3.6
+    script:
+        - python3.6 bootstrap.py
+        - ./bin/buildout
+        - ./bin/test
+        - ./bin/buildout setup setup.py bdist_egg
+        - pip install twine
+        - twine upload dist/*
+    variables:
+        TWINE_USERNAME: $PYPI_USERNAME
+        TWINE_PASSWORD: $PYPI_PASSWORD
+    only:
+        refs:
+            - tags
+    except:
+        variables:
+            - $PYPI_UPLOAD_DISABLED
+
+dist-3.7:
+    stage: dist
+    image: python:3.7
+    script:
+        - python3.7 bootstrap.py
+        - ./bin/buildout
+        - ./bin/test
+        - ./bin/buildout setup setup.py bdist_egg
+        - pip install twine
+        - twine upload dist/*
+    variables:
+        TWINE_USERNAME: $PYPI_USERNAME
+        TWINE_PASSWORD: $PYPI_PASSWORD
+    only:
+        refs:
+            - tags
+    except:
+        variables:
+            - $PYPI_UPLOAD_DISABLED
+
+dist-3.8:
+    stage: dist
+    image: python:3.8
+    script:
+        - python3.8 bootstrap.py
+        - ./bin/buildout
+        - ./bin/test
+        - ./bin/buildout setup setup.py bdist_egg
+        - pip install twine
+        - twine upload dist/*
+    variables:
+        TWINE_USERNAME: $PYPI_USERNAME
+        TWINE_PASSWORD: $PYPI_PASSWORD
+    only:
+        refs:
+            - tags
+    except:
+        variables:
+            - $PYPI_UPLOAD_DISABLED
+
+dist-3.9:
+    stage: dist
+    image: python:3.9
+    script:
+        - python3.9 bootstrap.py
+        - ./bin/buildout
+        - ./bin/test
+        - ./bin/buildout setup setup.py bdist_egg
+        - pip install twine
+        - twine upload dist/*
+    variables:
+        TWINE_USERNAME: $PYPI_USERNAME
+        TWINE_PASSWORD: $PYPI_PASSWORD
+    only:
+        refs:
+            - tags
+    except:
+        variables:
+            - $PYPI_UPLOAD_DISABLED
