--- a/buildout.cfg
+++ b/buildout.cfg
@@ -17,6 +17,7 @@ develop =
     ../pyams_form
     ../pyams_i18n
     ../pyams_layer
+    ../pyams_mail
     ../pyams_pagelet
     ../pyams_security
     ../pyams_site
@@ -55,4 +56,4 @@ recipe = zc.recipe.testrunner
 eggs = pyams_zmi [test]
 
 [versions]
-pyams_zmi = 1.1.1
+pyams_zmi = 1.1.2
