--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,6 +1,6 @@
 [buildout]
 eggs-directory = eggs
-extends = http://download.ztfy.org/pyams/pyams-dev-v2.cfg
+extends = http://download.ztfy.org/pyams/pyams-v2-py3.9.cfg
 socket-timeout = 3
 
 versions = versions
@@ -32,6 +32,12 @@ parts =
     pylint
     test
 
+[buildout:python37]
+extends = http://download.ztfy.org/pyams/pyams-v2-py3.7.cfg
+
+[buildout:python38]
+extends = http://download.ztfy.org/pyams/pyams-v2-py3.8.cfg
+
 [package]
 recipe = zc.recipe.egg
 eggs = pyams_zmi
@@ -55,4 +61,4 @@ recipe = zc.recipe.testrunner
 eggs = pyams_zmi [test]
 
 [versions]
-pyams_zmi = 1.15.0
+pyams_zmi = 2.0.0
