Updated Buildout configuration

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,13 +1,7 @@
 [buildout]
+extends = http://download.ztfy.org/pyams/pyams-v2.cfg
 eggs-directory = eggs
-extends = http://download.ztfy.org/pyams/pyams-v2-py3.9.cfg
-socket-timeout = 3
 
-versions = versions
-allow-picked-versions = false
-newest = false
-
-src = src
 develop =
     .
     ../myams_js
@@ -32,12 +26,6 @@ parts =
     pylint
     test
 
-[buildout:python37]
-extends = http://download.ztfy.org/pyams/pyams-v2-py3.7.cfg
-
-[buildout:python38]
-extends = http://download.ztfy.org/pyams/pyams-v2-py3.8.cfg
-
 [package]
 recipe = zc.recipe.egg
 eggs = pyams_zmi
@@ -61,4 +49,3 @@ recipe = zc.recipe.testrunner
 eggs = pyams_zmi [test]
 
 [versions]
-pyams_zmi = 2.0.0
