--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -75,6 +75,29 @@ coverage:
         variables:
             - $CODE_COVERAGE_DISABLED
 
+sonarcloud:
+    stage: quality
+    allow_failure: true
+    image:
+        name: sonarsource/sonar-scanner-cli:latest
+        entrypoint: [""]
+    variables:
+        SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+        SONAR_URL: https://sonarcloud.io
+        SONAR_HOST_URL: https://sonarcloud.io
+    cache:
+        key: "${CI_JOB_NAME}"
+        paths:
+            - .sonar/cache
+    script:
+        - sonar-scanner -Dsonar.qualitygate.wait=true -Dsonar.organization=pyams
+    only:
+        - merge_requests
+        - master
+    except:
+        variables:
+            - $SONARCLOUD_DISABLED
+
 build-3.7:
     stage: build
     script:
