Added support for Python 3.12

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,22 +13,21 @@ cache:
         - parts/
 
 before_script:
-    - apt update && apt install -y iputils-ping
-    - ping -c 1 -W 1 172.17.0.1 && export http_proxy=http://172.17.0.1:3128/
-    - ping -c 1 -W 1 172.17.0.1 && export HTTP_PROXY=http://172.17.0.1:3128/
-    - ping -c 1 -W 1 172.17.0.1 && export https_proxy=http://172.17.0.1:3128/
-    - ping -c 1 -W 1 172.17.0.1 && export HTTPS_PROXY=http://172.17.0.1:3128/
+    - type apt && apt update
+    - type apt && apt install -y libgdal-dev
+    - type apt && apt install -y gdal-bin
+    - type gdalinfo && echo "GDAL=$(gdalinfo --version | cut -d ',' -f 1 | cut -d ' ' -f 2)" >> buildout.cfg
 
 bootstrap:
     stage: .pre
     script:
-        - pip install pip==22.3.1 setuptools==65.6.3 zc.buildout==3.0.1 zc.recipe.egg==2.0.7
+        - pip install pip==24.0 setuptools==68.0.0 zc.buildout==3.2.0 zc.recipe.egg==2.0.7
         - buildout
 
 test-3.7:
     stage: test
     script:
-        - pip install anybadge==1.14.0 coverage==7.2.7 zc.buildout==3.0.1
+        - pip install anybadge==1.14.0 coverage==7.2.7 zc.buildout==3.2.0
         - buildout
         - mkdir ./coverage
         - coverage erase
@@ -46,7 +45,7 @@ pylint:
     stage: quality
     allow_failure: true
     script:
-        - pip install pylint-exit anybadge zc.buildout==3.0.1
+        - pip install pylint-exit anybadge zc.buildout==3.2.0
         - buildout
         - mkdir ./pylint
         - ./bin/pylint src/pyams_zmi/ | tee ./pylint/pylint.log || pylint-exit $?
@@ -101,7 +100,7 @@ sonarcloud:
 build-3.7:
     stage: build
     script:
-        - pip install zc.buildout==3.0.1
+        - pip install zc.buildout==3.2.0
         - buildout setup setup.py clean --all sdist
     artifacts:
         paths:
@@ -113,7 +112,7 @@ build-3.7:
 dist-3.7:
     stage: dist
     script:
-        - pip install pip==22.3.1 setuptools==65.6.3 zc.buildout==3.0.1 zc.recipe.egg==2.0.7
+        - pip install pip==24.0 setuptools==68.0.0 zc.buildout==3.2.0 zc.recipe.egg==2.0.7
         - buildout
         - ./bin/test
         - buildout setup setup.py sdist bdist_wheel
@@ -133,7 +132,7 @@ dist-3.8:
     stage: dist
     image: python:3.8
     script:
-        - pip install pip==22.3.1 setuptools==65.6.3 zc.buildout==3.0.1 zc.recipe.egg==2.0.7
+        - pip install pip==24.2 setuptools==68.0.0 zc.buildout==3.2.0 zc.recipe.egg==2.0.7
         - buildout
         - ./bin/test
         - buildout setup setup.py bdist_wheel
@@ -153,7 +152,7 @@ dist-3.9:
     stage: dist
     image: python:3.9
     script:
-        - pip install pip==22.3.1 setuptools==65.6.3 zc.buildout==3.0.1 zc.recipe.egg==2.0.7
+        - pip install pip==24.2 setuptools==68.0.0 zc.buildout==3.2.0 zc.recipe.egg==2.0.7
         - buildout
         - ./bin/test
         - buildout setup setup.py bdist_wheel
@@ -173,7 +172,7 @@ dist-3.10:
     stage: dist
     image: python:3.10
     script:
-        - pip install pip==22.3.1 setuptools==65.6.3 zc.buildout==3.0.1 zc.recipe.egg==2.0.7
+        - pip install pip==24.2 setuptools==68.0.0 zc.buildout==3.2.0 zc.recipe.egg==2.0.7
         - buildout
         - ./bin/test
         - buildout setup setup.py bdist_wheel
@@ -193,7 +192,27 @@ dist-3.11:
     stage: dist
     image: python:3.11
     script:
-        - pip install pip==22.3.1 setuptools==65.6.3 zc.buildout==3.0.1 zc.recipe.egg==2.0.7
+        - pip install pip==24.2 setuptools==68.0.0 zc.buildout==3.2.0 zc.recipe.egg==2.0.7
+        - buildout
+        - ./bin/test
+        - buildout setup setup.py bdist_wheel
+        - pip install twine
+        - twine upload --skip-existing dist/*
+    variables:
+        TWINE_USERNAME: $PYPI_USERNAME
+        TWINE_PASSWORD: $PYPI_PASSWORD
+    only:
+        refs:
+            - tags
+    except:
+        variables:
+            - $PYPI_UPLOAD_DISABLED
+
+dist-3.12:
+    stage: dist
+    image: python:3.12
+    script:
+        - pip install pip==24.2 setuptools==68.0.0 zc.buildout==3.2.0 zc.recipe.egg==2.0.7
         - buildout
         - ./bin/test
         - buildout setup setup.py bdist_wheel
